--- a/en/Awards.html
+++ b/en/Awards.html
@@ -4,9 +4,19 @@ redirect_from: /ru/Awards.html
 title: "ConEmu | Awards"
 
 noindex: true
+
+breadcrumbs:
+ - url: TableOfContents.html#extras
+   title: Extras
+
+readalso:
+ - url: Reviews.html
+   title: ConEmu Reviews
+ - url: Acknowledgement.html
+   title: ConEmu Acknowledgement
 ---
 
-<h1> Awards </h1>
+<h1> ConEmu Awards </h1>
 
 <p><a href="http://sourceforge.net/blog/may-2015-community-choice-project-of-the-month-conemu/">May 2015, “Community Choice” Project of the Month (SourceForge.net)</a>. </p>
 
@@ -32,9 +42,10 @@ noindex: true
 <li><a href="http://superuser.com/a/441531/139371" rel="nofollow">How to embed PowerShell into Explorer or Explorer-like tool?</a> </li>
 <li><a href="http://superuser.com/a/445405/139371" rel="nofollow">Attach a running console application to a new ConEmu instance</a> </li>
 <li><a href="http://superuser.com/a/441853/139371" rel="nofollow">Windows console with ANSI colors handling</a> </li>
-<li><a href="http://superuser.com/a/441545/139371" rel="nofollow">What are the PowerShell consoles for Windows?</a> </li></ul></ul><p><!-- &lt;a href=&quot;http://meta.superuser.com/a/5023/139371&quot;&gt;adverising sidebar&lt;/a&gt;,
- --> </p>
-<p><!-- ===!StackOverflow Open Source Advertising: Sidebar 2012===&lt;table&gt;&lt;tr&gt; &lt;td width=&quot;230&quot;&gt; &lt;a href=&quot;http://meta.superuser.com/a/5023/139371&quot;&gt;&lt;img src=&quot;http://conemu-maximus5.googlecode.com/svn/files/ConEmu2012U.png&quot; title=&quot;Community Promotion Ads - 2012&quot;/&gt;&lt;/a&gt; &lt;/td&gt; &lt;td width=&quot;230&quot;&gt; &lt;a href=&quot;http://meta.stackoverflow.com/a/134414/187198&quot;&gt;&lt;img src=&quot;http://conemu-maximus5.googlecode.com/svn/files/ConEmu2012.png&quot; title=&quot;Open Source Advertising - Sidebar - 2012&quot;/&gt;&lt;/a&gt; &lt;/td&gt; &lt;td width=&quot;400&quot; valign=&quot;top&quot;&gt; This adverising was posted to Meta !StackOverflow,&lt;br/&gt; it requires a minimum score threshold (at least 6)&lt;br/&gt; before it will be served up and shown on the site.&lt;br/&gt; Please, !UpVote them!
- &lt;/td&gt;&lt;/tr&gt;&lt;/table&gt; --> </p>
+<li><a href="http://superuser.com/a/441545/139371" rel="nofollow">What are the PowerShell consoles for Windows?</a> </li></ul></ul>
+
+<!-- &lt;a href=&quot;http://meta.superuser.com/a/5023/139371&quot;&gt;adverising sidebar&lt;/a&gt;, -->
+<!-- StackOverflow Open Source Advertising: Sidebar 2012===&lt;table&gt;&lt;tr&gt; &lt;td width=&quot;230&quot;&gt; &lt;a href=&quot;http://meta.superuser.com/a/5023/139371&quot;&gt;&lt;img src=&quot;http://conemu-maximus5.googlecode.com/svn/files/ConEmu2012U.png&quot; title=&quot;Community Promotion Ads - 2012&quot;/&gt;&lt;/a&gt; &lt;/td&gt; &lt;td width=&quot;230&quot;&gt; &lt;a href=&quot;http://meta.stackoverflow.com/a/134414/187198&quot;&gt;&lt;img src=&quot;http://conemu-maximus5.googlecode.com/svn/files/ConEmu2012.png&quot; title=&quot;Open Source Advertising - Sidebar - 2012&quot;/&gt;&lt;/a&gt; &lt;/td&gt; &lt;td width=&quot;400&quot; valign=&quot;top&quot;&gt; This adverising was posted to Meta !StackOverflow,&lt;br/&gt; it requires a minimum score threshold (at least 6)&lt;br/&gt; before it will be served up and shown on the site.&lt;br/&gt; Please, !UpVote them!
+ &lt;/td&gt;&lt;/tr&gt;&lt;/table&gt; -->
 
 <!-- Content ends -->
