Change deprecated googlecode issues links to github

--- a/en/Issues2.html
+++ b/en/Issues2.html
@@ -4,7 +4,7 @@ noindex: true
 
 <!-- Content starts -->
 
-<h3 id="h0"><a name=""></a><a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=625" rel="nofollow">Appearence discussion issue</a></h3>
+<h3 id="h0"><a name=""></a><a href="http://github.com/Maximus5/conemu-old-issues/issues/625" rel="nofollow">Appearence discussion issue</a></h3>
 
 <h1><a name="Variant_3"></a>Variant 3<a href="#Variant_3" class="section_anchor"></a></h1>
 <p><table border="0">
