--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -167,7 +167,7 @@ otherlang:
 <p>A. Читайте wiki-страницу <a href="ConEmuEnvironment.html">ConEmu Environment</a>. </p>
 
 <h3><a name="Q._Запущенная_программа_ничего_не_в"></a>Q. Запущенная программа ничего не выводит на экран.<a href="#Q._Запущенная_программа_ничего_не_в" class="section_anchor"></a></h3>
-<p>A. Некоторые программы работают с альтернативным буфером консоли, например telnet.exe, запущенный без параметров. Историю можно посмотреть здесь: <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=65" rel="nofollow">Issue 65</a>. Проблема исправлена в сборке 120504, должен быть включен флажок «Inject <a href="ConEmuHk.html">ConEmuHk</a>». В предыдущих версиях ConEmu можно было отобразить (CtrlWinAltSpace) окно реальной консоли и временно поработать с ним. </p>
+<p>A. Некоторые программы работают с альтернативным буфером консоли, например telnet.exe, запущенный без параметров. Историю можно посмотреть здесь: <a href="http://github.com/Maximus5/conemu-old-issues/issues/65" rel="nofollow">Issue 65</a>. Проблема исправлена в сборке 120504, должен быть включен флажок «Inject <a href="ConEmuHk.html">ConEmuHk</a>». В предыдущих версиях ConEmu можно было отобразить (CtrlWinAltSpace) окно реальной консоли и временно поработать с ним. </p>
 <p>A. В результате какого-то бага в ShellExecuteEx, на некоторых OS, консольный процесс запускался с некорректным дескриптором буфера вывода. Для исправления ошибки должен быть включен флажок «Inject ConEmuHk». Если ошибка не исправляется - создайте новый <a href="http://code.google.com/p/conemu-maximus5/issues/entry" rel="nofollow">Issue</a> с подробным описанием проблемы и приложите отладочный лог запускаемой программы: «Settings -&gt; Debug -&gt; Shell and processes». </p>
 
 <h3><a name="Q._Программа_не_работает_в_режиме_«Lo"></a>Q. Программа не работает в режиме «Long console output».<a href="#Q._Программа_не_работает_в_режиме_«Lo" class="section_anchor"></a></h3>
@@ -319,7 +319,7 @@ cmd -cur_console:s2THn</pre>
 
 <h3><a name="Q._Почему_не_работает_(плагин)_Drag-n-Drop"></a>Q. Почему не работает (плагин) Drag-n-Drop?<a href="#Q._Почему_не_работает_(плагин)_Drag-n-Drop" class="section_anchor"></a></h3>
 <p>A. «Shell style Drag and Drop» встроен в ConEmu и настраивается на вкладке &#x27;Far Manager&#x27; окна &#x27;Settings&#x27;. ConEmu умеет вытаскивать файлы «наружу» в другие приложения (проводник, GIMP, и т.п.) и принимать файлы внутрь (на панели и командную строку) из других приложений. Для корректной работы «Shell style Drag and Drop» в Far должен быть установлен плагин ConEmu.dll (ConEmu.x64.dll). ConEmu может драгать файлы как левой (флажок LDrag) так и правой (RDrag) кнопками мышки. Опционально можно назначить модификатор, например драгать файлы левой кнопкой только при удерживаемом LCtrl. </p>
-<p>A. Скриншоты и некоторые пояснения можно посмотреть/почитать здесь: <a title="Конфликт с плагином drag_n_drop ?" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=527">Issue 527&nbsp;</a>. </p>
+<p>A. Скриншоты и некоторые пояснения можно посмотреть/почитать здесь: <a title="Конфликт с плагином drag_n_drop ?" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/527">Issue 527&nbsp;</a>. </p>
 <p>A. Плагин (сторонний) Drag-n-Drop не поддерживался, не поддерживается и поддерживаться не будет, т.к. эта функциональность встроена в ConEmu. </p>
 
 <h3><a name="Q._Как_закрыть_таб_(редактор/вьювер/"></a>Q. Как закрыть таб (редактор/вьювер/фар) мышкой?<a href="#Q._Как_закрыть_таб_(редактор/вьювер/" class="section_anchor"></a></h3>
