Add LoftBlog screencast (russian)

--- a/en/Screencasts.html
+++ b/en/Screencasts.html
@@ -40,3 +40,12 @@ breadcrumbs:
 </iframe>
  </p>
 <p>Read about <a href="http://seleniumsimplified.com/get-started/" rel="nofollow">Selenium simplified</a>. </p>
+
+<h2 id="Screencast_by_LoftBlog"> Screencast by LoftBlog (Russian) </h2>
+<p>
+<iframe width="425" height="344" frameborder="0"
+ src="https://www.youtube.com/embed/x0hw8llIZkY"
+ allowfullscreen>
+</iframe>
+ </p>
+<p>Visit <a href="http://www.youtube.com/channel/UCIIt69f5D44s2cdb9vXQNzA" rel="nofollow">LoftBlog</a> channel. </p>
