Descibe `-agent` switch

--- a/en/ConEmuC.html
+++ b/en/ConEmuC.html
@@ -109,7 +109,7 @@ ConEmuC /DEBUGTREE &lt;command line&gt;
 <h4><a name="Download"></a>Download from http/https/ftp<a href="#Download" class="section_anchor"></a></h4>
 <pre class="prettyprint">ConEmuC /download [-login &lt;name&gt; -password &lt;pwd&gt;]
     [-proxy &lt;address:port&gt; [-proxylogin &lt;name&gt; -proxypassword &lt;pwd&gt;]]
-    [-async Y|N] [-otimeout &lt;ms&gt;] [-timeout &lt;ms&gt;]
+    [-async Y|N] [-otimeout &lt;ms&gt;] [-timeout &lt;ms&gt;] [-agent <name>]
     &quot;full_url_to_file&quot; &quot;local_path_name&quot;</pre>
 
 <h4><a name="Commands"></a>Execute commands and create tabs (use with caution!)<a href="#Commands" class="section_anchor"></a></h4>
