--- a/en/Screencasts.html
+++ b/en/Screencasts.html
@@ -17,7 +17,7 @@ breadcrumbs:
 <li> <a href="#by_Latish_Sehgal">Screencast by Latish Sehgal</a> </li>
 <li> <a href="#Get_Started_With_Selenium">Part of &#x27;Get Started With Selenium WebDriver&#x27;</a> </li>
 <li> <a href="#by_LoftBlog"> Screencast by LoftBlog (Russian) </a> </li>
-<li> <a href="#by_Patrick_Hamy"> ConEmu - console Windows avec des onglets (French) </a> </li>
+<li> <a href="#by_Patrick_Hamy"> Console Windows avec des onglets (French) </a> </li>
 </ul></p>
 
 <p><ul>
@@ -70,7 +70,7 @@ breadcrumbs:
 
 
 
-<h2 id="by_Patrick_Hamy"> ConEmu - console Windows avec des onglets (French) </h2>
+<h2 id="by_Patrick_Hamy"> Console Windows avec des onglets (French) </h2>
 <p>
 <iframe width="425" height="344" frameborder="0"
  src="https://www.youtube.com/embed/PuM5td0ctzY"
