Misprint: Looses -> Loses.

--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -565,7 +565,7 @@ print: &quot;qqq&quot;; WindowMinimize</pre>
 
 <h2><a name="Build_130227"></a>Build 130227<a href="#Build_130227" class="section_anchor"></a></h2>
 <ul><li>Win8: Resize bugfix. </li>
-<li><a title="Quake Mode should support auto-hide on loose focus" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/592">Issue 592&nbsp;</a>: Quake-style autohide when clicking on taskbar. </li>
+<li><a title="Quake Mode should support auto-hide on loses focus" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/592">Issue 592&nbsp;</a>: Quake-style autohide when clicking on taskbar. </li>
 <li><a title="ConEmu-Mintty: Mouse Cursor is hidden after application switch" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/888">Issue 888&nbsp;</a>: Fixing MinTTY bug. </li>
 <li><a title="Unable to attach console to powershell" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/960">Issue 960&nbsp;</a>: Sometimes ConEmu crashes while attaching external console (in progress). </li>
 <li>Crash on <a href="GuiMacro.html">GuiMacro</a> WindowMaximize(). </li></ul>
@@ -582,7 +582,7 @@ print: &quot;qqq&quot;; WindowMinimize</pre>
 <ul><li><a title="cannot select text" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/949">Issue 949&nbsp;</a>: Selection failed with buffer and ‘Freeze console’ checked. </li></ul>
 
 <h2><a name="Build_130219"></a>Build 130219<a href="#Build_130219" class="section_anchor"></a></h2>
-<ul><li><a title="Quake Mode should support auto-hide on loose focus" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/592">Issue 592&nbsp;</a>: Quake activation/deactivation changes. </li>
+<ul><li><a title="Quake Mode should support auto-hide on loses focus" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/592">Issue 592&nbsp;</a>: Quake activation/deactivation changes. </li>
 <li><a title="Full Screen Does Not Allow Win+Shift+Arrow to Move Monitors" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/912">Issue 912&nbsp;</a>: Internal processing of Win+Shift+Left/Right - move ConEmu window to previous/next monitor. </li>
 <li><a title="7zip not found! It is not installed?" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/939">Issue 939&nbsp;</a>: Update failes if full path to 7za.exe was not specified, but 7za.exe is located in %PATH%. </li>
 <li><a title="Blinking then ConEmu starting minimized" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/946">Issue 946&nbsp;</a>: Exception in some cases running with &quot;/Log2&quot; switch. </li>
