--- a/en/Whats_New_3.html
+++ b/en/Whats_New_3.html
@@ -678,7 +678,7 @@ ConEmuC -t [-r] [-b] &quot;file&quot; for printing some text file</pre>
 <h2><a name="Build_140428"></a>Build 140428<a href="#Build_140428" class="section_anchor"></a></h2>
 <ul><li>Shield was not set on ‘Restart’ button in ‘Recreate’ dialog. </li>
 <li>github<code>#</code>5: Console was not started as admin when ‘Create new console’ dialog was skipped. </li>
-<li>Don&#x27;t hide row/col highlight on focus loose. </li>
+<li>Don&#x27;t hide row/col highlight on focus lose. </li>
 <li><a title="switch  -new_console:u:&quot;other_user:password&quot; lock the account of other_user"  href="http://github.com/Maximus5/conemu-old-issues/issues/1557">Issue 1557</a>: Switch <code>-new_console:u:&quot;other_user:password&quot;</code> may lock the account of other_user. In some cases starting new console without directly specified working directory (with <code>-cur_console:d:...</code> for example) may lock other_user account with reason ‘Bad password count exceeded’. </li>
 <li><a title="ConEmu fails to duplicate root when cmd.exe was catched as default terminal by hook"  href="http://github.com/Maximus5/conemu-old-issues/issues/1516">Issue 1516</a>: ConEmu fails to duplicate root when cmd.exe was catched as ‘Default terminal’. </li></ul>
 
