Installki.pl link

--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -42,7 +42,7 @@ readalso:
 
 
 <h3><a name="Third-pary_mirrors"></a>Third-pary mirrors<a href="#Third-pary_mirrors" class="section_anchor"></a></h3>
-<p><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a>,Instalki.pl and some others.
+<p><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a>,<a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> and some others.
 These mirrors are not maintained by project owners! <p>
 
 
