Just a UTF-8 mark

--- a/sitemap.html
+++ b/sitemap.html
@@ -4,6 +4,8 @@ description: List of all ConEmu website pages
 noindex: true
 ---
 
+{% comment %} ‘UTF-8’ {% endcomment %}
+
 <h1>List of all ConEmu website pages</h1>
 
 <table>
