Fix header anchors

--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -119,7 +119,7 @@ breadcrumbs:
 	</tr>
 </table>
 
-<p>ConEmuC.exe command line switches are described <a href="ConEmuC.html#ConEmuC.exe_command_line_switches">here</a>. </p>
+<p>ConEmuC.exe command line switches are described <a href="ConEmuC.html#ConEmuC_switches">here</a>. </p>
 
 
 <h2><a name="Examples"></a>Examples<a href="#Examples" class="section_anchor"></a></h2>
