--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -54,7 +54,7 @@ These mirrors are not maintained by project owners! <p>
 </ul>
 
 <h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
-<p>New plugins adopted to newest Far 3.0 are located now on GitHub </p>
+<p>New plugins adapted to newest Far 3.0 are located now on GitHub </p>
 <ul>
 	<li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow">New plugins for Far 3.0</a> </li>
 </ul>
