--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -412,7 +412,7 @@ Also, you may call &quot;/GUIMACRO:0&quot; to affect first found instance.</pre>
 
 <h2><a name="Build_130708"></a>Build 130708<a href="#Build_130708" class="section_anchor"></a></h2>
 <ul><li>Far Macro <code>&quot;ConEmu.Editor.fml&quot;</code> was changed! Update your copies in MacroLib! </li>
-<li><a title="Скрипты для MacroLib в формате FMLUA или LUA" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1126">Issue 1126&nbsp;</a>: ConEmu macros adopted for Far Manager 3 (tested in build 3502). New macros located in <code>&quot;%ConEmuBaseDir\Far3_lua&quot;</code>. You need to copy selected files to your <code>&quot;%FARPROFILE%\Macros\scripts&quot;</code> folder. </li>
+<li><a title="Скрипты для MacroLib в формате FMLUA или LUA" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1126">Issue 1126&nbsp;</a>: ConEmu macros adapted for Far Manager 3 (tested in build 3502). New macros located in <code>&quot;%ConEmuBaseDir\Far3_lua&quot;</code>. You need to copy selected files to your <code>&quot;%FARPROFILE%\Macros\scripts&quot;</code> folder. </li>
 <li>Right click on ‘Minimize’ button hides ConEmu to TSA. </li>
 <li><a title="&quot;Close all except active tab&quot; hotkey is missing" class=closed_ref href="http://github.com/Maximus5/conemu-old-issues/issues/1123">Issue 1123&nbsp;</a>: &quot;Close(5)&quot; crashes. </li></ul>
 
