Fix googlecode links

--- a/donate.html
+++ b/donate.html
@@ -61,7 +61,7 @@ AFAIK coinbase allows payments from linked Visa cards with US billing address.</
 	border="0"></img></div>
 
 <h3 id="flattr"><a href="https://flattr.com/">Flattr microdonations</a></h3>
-<div class="text stext"><a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808#c6">What is a Flattr and how it works</a>.</div>
+<div class="text stext"><a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603">What is a Flattr and how it works</a>.</div>
 <div class="text">
 	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
 	src="/img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
@@ -115,5 +115,5 @@ e-mail <img style="position: relative; top: 0.25em;" src="/img/email.png"> or tw
 <br>and I will send you my dedicated PayPal address in response,<br>
 which may be used for ‘sending money to family or friends’.</div>
 <div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
-check an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site for details,<br>
+check an <a href="https://github.com/Maximus5/conemu-old-issues/issues/1807" target="_blank">Issue 1807</a> on the project site for details,<br>
 or you may suggest other methods there.</div>
