--- a/donate.html
+++ b/donate.html
@@ -27,6 +27,7 @@ hosting... </p>
 <a href="/en/RoadMap.html">further development</a>
 and maintaining by contributing with
 <a href="/en/Issues.html">bugreporting</a>,
+<a href="/en/Localization.html">localization</a>,
 <a href="#funding">funding (look below)</a>,
 <a href="https://github.com/ConEmu/ConEmu.github.io">helping with documentation</a>,
 <a href="https://github.com/Maximus5/ConEmu">coding</a>,
