Fix otherlang for /index.html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ description: "ConEmu-Maximus5 is a full-featured local terminal for Windows devs
 og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
 
 otherlang:
-   eng: /
-   rus: /ru/index.html
+   en: /
+   ru: /ru/index.html
 ---
 
 {% include index_en.html %}
