Update Screenshots.html with BashOnWindows

--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -12,6 +12,8 @@ breadcrumbs:
 screenshots:
  - title: "ConEmu splits with cmd and powershell"
    src:    ConEmu-Maximus5.png
+ - title: "Bash on Windows in ConEmu"
+   src:    BashOnWindows.png
  - title: "ConEmu and Solarized Git"
    src:    SolarizedGit.png
  - title: "Far, cmd, Notepad and PUTTY started in ConEmu"
