Remove 'stable is very old' warning

--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -20,7 +20,9 @@ readalso:
 <tr><td align="left" valign="top" colspan="3" width="550">
 
 <h1 id="h0"><a name="Which_version_to_choose"></a>Which version to choose<a href="#Which_version_to_choose" class="section_anchor"></a></h1>
-<p>‘Preview’ builds are recommended for most users. At the moment, last ‘Stable’ is very old and ‘Preview’ coming to be ‘Stable’ soon. Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
+<p>‘Preview’ builds are recommended for most users.
+<!--At the moment, last ‘Stable’ is very old and ‘Preview’ coming to be ‘Stable’ soon.-->
+Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
 
 <h2><a name="Download_mirrors_(official)"></a>Download mirrors (official)<a href="#Download_mirrors_(official)" class="section_anchor"></a></h2>
 <p></td> <td align="left" valign="top" rowspan="2"><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a></td>
@@ -64,9 +66,11 @@ These mirrors are not maintained by project owners! <p>
 	<li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow">Far3bis on GitHub</a> </li>
 	<li><a href="https://sourceforge.net/projects/conemu/files/FarManager/Far3bis/" rel="nofollow">Far3bis downloads</a> </li>
 </ul>
+<!--
 <p>I have not updated yet some plugins released for Far Manager (2.0 and 3.0.2790). Due to breaking changes in Far API (Lua related) old plugins will not be working in the current builds of Far 3.x. But if you need them, you may download them here: </p>
 <ul>
 	<li><a href="http://code.google.com/p/conemu-maximus5/downloads/list" rel="nofollow">Old plugins, Far2bis, Far3bis</a> </li>
 </ul>
+-->
 
 <!-- Content ends -->
