--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -28,7 +28,7 @@ Read more about <a href="VersionComparison.html#release-stages">release stages</
 <p></td> <td align="left" valign="top" rowspan="2"><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a></td>
 </tr>
 <tr>
-	<td width="265" height="50" align="left" valign="center"><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td>
+	<td width="265" height="50" align="left" valign="center"><a href="{{ site.fosshub }}" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td>
 	<td width="70" height="50" align="left" valign="center">Primary</td>
 	<td width="215"> </td>
 </tr>
@@ -37,7 +37,7 @@ Read more about <a href="VersionComparison.html#release-stages">release stages</
 
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
 <ul>
-	<li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">Fosshub.com</a> </li>
+	<li><a href="{{ site.fosshub }}" rel="nofollow">Fosshub.com</a> </li>
 	<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow">Sourceforge.com</a> </li>
 	<li><a href="https://github.com/Maximus5/ConEmu/releases" rel="nofollow">GitHub.com</a> </li>
 </ul>
