New bitcoin address

--- a/donate.html
+++ b/donate.html
@@ -51,15 +51,15 @@ may be most handy way for donations.<br/>
 Just choose your amount and type e-mail<br/>
 <img style="position: relative; top: 0.25em;" src="/img/email.png"> in the gift card details.</div>
 
-<h3 id="bitcoin"><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h3>
+<h3 id="bitcoin"><a href="https://bitcoin.org">Bitcoin (BTC)</a></h3>
 <div class="text stext">Bitcoin is digital currency based on open-source software.
 <a href="https://bitcoin.org/en/faq">Bitcoin FAQ</a>.</div>
 <div class="text stext">Perhaps the easiest way to use it are online wallets, like <a href="https://www.coinbase.com/">coinbase</a> for example.
 AFAIK coinbase allows payments from linked Visa cards with US billing address.</div>  
-<div class="text">BTC: <a href="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc?label=ConEmu-Maximus5&message=Support%20ConEmu%20development">1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc</a></div>
+<div class="text">BTC: <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development">1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</a></div>
 <div><img
-	src="/img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
-	border="0"></img></div>
+	src="/img/bitcoin-core-qr.png" alt="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4"
+  title="Contribute via Bitcoin" border="0"></img></div>
 
 <h3 id="flattr"><a href="https://flattr.com/">Flattr microdonations</a></h3>
 <div class="text stext"><a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603">What is a Flattr and how it works</a>.</div>
