--- a/donate_en.html
+++ b/donate_en.html
@@ -1,4 +1,7 @@
 ---
+redirect_to:
+ - /donate.html
+
 title: ConEmu | Support development by donation
 
 description: "You can show your appreciation and support further development and maintaining
@@ -11,8 +14,8 @@ breadcrumbs:
    title: ConEmu
 
 otherlang:
-   en: /donate.html
-   ru: /donate_ru.html
+   en: /donate_en.html
+   ru: /donate.html
 ---
 
 {% include donate_en.html %}
