--- a/en/index.html
+++ b/en/index.html
@@ -1,5 +1,5 @@
 ---
-canonical: http://conemu.github.io/
+canonical: https://conemu.github.io/
 noindex: true
 
 redirect_from: /en/ConEmu.html
@@ -9,7 +9,7 @@ title: ConEmu - Handy Windows Terminal
 description: "ConEmu-Maximus5 is a full-featured local terminal for Windows devs, admins and users.
   Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more."
 
-og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
+og_image: https://conemu.github.io/img/ConEmu-Maximus5.png
 
 otherlang:
    en: /
