--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -25,7 +25,7 @@ readalso:
 Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
 
 <h2><a name="Download_mirrors_(official)"></a>Download mirrors (official)<a href="#Download_mirrors_(official)" class="section_anchor"></a></h2>
-<p></td> <td align="left" valign="top" rowspan="2"><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow"><img border="0" src="http://s1.softpedia-static.com/base_img/softpedia_free_award_f.gif"></img></a></td>
+<p></td> <td align="left" valign="top" rowspan="2">&nbsp;</td>
 </tr>
 <tr>
 	<td width="265" height="50" align="left" valign="center"><a href="{{ site.fosshub }}" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td>
@@ -44,9 +44,11 @@ Read more about <a href="VersionComparison.html#release-stages">release stages</
 
 
 <h3><a name="Third-pary_mirrors"></a>Third-pary mirrors<a href="#Third-pary_mirrors" class="section_anchor"></a></h3>
-<p><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a>,
-<a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> and some others.
-These mirrors are not maintained by project owners! <p>
+<p>These mirrors are not maintained by project owners!</p>
+<p><ul>
+	<li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li>
+	<li><a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> </li>
+</ul></p>
 
 
 <h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
