--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@ title: ConEmu - Handy Windows Terminal
 description: "ConEmu-Maximus5 is a full-featured local terminal for Windows devs, admins and users.
   Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more."
 
-og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
+og_image: https://conemu.github.io/img/ConEmu-Maximus5.png
 
 otherlang:
    en: /
    ru: /ru/index.html
 ---
 
+{% if site.site_lang == 'ru' %}
+{% include index_ru.html %}
+{% else %}
 {% include index_en.html %}
+{% endif %}
