--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -16,57 +16,52 @@ readalso:
 
 <!-- Content starts -->
 
-<table class="no-border">
-<tr><td align="left" valign="top" colspan="3" width="550">
-
 <h1 id="h0"><a name="Which_version_to_choose"></a>Which version to choose<a href="#Which_version_to_choose" class="section_anchor"></a></h1>
 <p>‘Preview’ builds are recommended for most users.
 <!--At the moment, last ‘Stable’ is very old and ‘Preview’ coming to be ‘Stable’ soon.-->
 Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
 
-<h2><a name="Download_mirrors_(official)"></a>Download mirrors (official)<a href="#Download_mirrors_(official)" class="section_anchor"></a></h2>
-<p></td> <td align="left" valign="top" rowspan="2">&nbsp;</td>
-</tr>
-<tr>
-	<td width="265" height="50" align="left" valign="center"><a href="{{ site.fosshub }}" rel="nofollow"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a></td>
-	<td width="70" height="50" align="left" valign="center">Primary</td>
-	<td width="215"> </td>
-</tr>
-</table>
+<h2><a name="Download_mirrors_(official)"></a>Download mirrors<a href="#Download_mirrors_(official)" class="section_anchor"></a></h2>
+<div class="build_download">
+<a href="{{ site.fosshub }}" rel="nofollow" target="_blank"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
+<span>&nbsp;&nbsp;</span>
+<a href="/donate.html"><img src="/img/Donate.png" alt="Donate" title="Support development by donation"></img></a>
+</div>
 
 
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
 <ul>
-	<li><a href="{{ site.fosshub }}" rel="nofollow">Fosshub.com</a> </li>
-	<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow">Sourceforge.com</a> </li>
-	<li><a href="https://github.com/Maximus5/ConEmu/releases" rel="nofollow">GitHub.com</a> </li>
+	<li><a href="{{ site.fosshub }}" rel="nofollow" target="_blank">Fosshub.com</a> </li>
+	<li><a href="https://sourceforge.net/projects/conemu/files/" rel="nofollow" target="_blank">Sourceforge.com</a> </li>
+	<li><a href="https://github.com/Maximus5/ConEmu/releases" rel="nofollow" target="_blank">GitHub.com</a> </li>
 </ul>
 
 
 <h3><a name="Third-pary_mirrors"></a>Third-pary mirrors<a href="#Third-pary_mirrors" class="section_anchor"></a></h3>
 <p>These mirrors are not maintained by project owners!</p>
 <p><ul>
-	<li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li>
-	<li><a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> </li>
+	<li><a href="https://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow" target="_blank">Softpedia.com</a> </li>
+	<li><a href="https://www.majorgeeks.com/files/details/conemu.html" rel="nofollow" target="_blank">MajorGeeks.com</a> </li>
+	<li><a href="https://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow" target="_blank">Instalki.pl</a> </li>
 </ul></p>
 
 
 <h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
 <p>Searching for some old (exact) ConEmu build? All builds are available here: </p>
 <ul>
-	<li><a href="http://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow">Release archives (sourceforge)</a> </li>
-	<li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li>
+	<li><a href="https://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow" target="_blank">Release archives (sourceforge)</a> </li>
+	<li><a href="https://www.fosshub.com/ConEmu-old.html" rel="nofollow" target="_blank">Release archives (oldfoss)</a> </li>
 </ul>
 
 <h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
 <p>New plugins adapted to newest Far 3.0 are located now on GitHub </p>
 <ul>
-	<li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow">New plugins for Far 3.0</a> </li>
+	<li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow" target="_blank">New plugins for Far 3.0</a> </li>
 </ul>
 <p>Far3bis sources and binaries </p>
 <ul>
-	<li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow">Far3bis on GitHub</a> </li>
-	<li><a href="https://sourceforge.net/projects/conemu/files/FarManager/Far3bis/" rel="nofollow">Far3bis downloads</a> </li>
+	<li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow" target="_blank">Far3bis on GitHub</a> </li>
+	<li><a href="https://sourceforge.net/projects/conemu/files/FarManager/Far3bis/" rel="nofollow" target="_blank">Far3bis downloads</a> </li>
 </ul>
 <!--
 <p>I have not updated yet some plugins released for Far Manager (2.0 and 3.0.2790). Due to breaking changes in Far API (Lua related) old plugins will not be working in the current builds of Far 3.x. But if you need them, you may download them here: </p>
