Donate page redesign

--- a/donate.html
+++ b/donate.html
@@ -13,6 +13,12 @@ breadcrumbs:
 otherlang:
    en: /donate.html
    ru: /donate_ru.html
+
+readalso:
+ - url: /en/Downloads.html
+   title: "Download Mirrors"
+ - url: /en/TableOfContents.html
+   title: "Documentation"
 ---
 
 {% if site.site_lang == 'ru' %}
