--- a/donate_en.html
+++ b/donate_en.html
@@ -16,6 +16,12 @@ breadcrumbs:
 otherlang:
    en: /donate_en.html
    ru: /donate.html
+
+readalso:
+ - url: /en/Downloads.html
+   title: "Download Mirrors"
+ - url: /en/TableOfContents.html
+   title: "Documentation"
 ---
 
 {% include donate_en.html %}
