--- a/donate_ru.html
+++ b/donate_ru.html
@@ -12,6 +12,12 @@ breadcrumbs:
 otherlang:
    en: /donate_en.html
    ru: /donate.html
+
+readalso:
+ - url: /ru/Downloads.html
+   title: "Скачать ConEmu"
+ - url: /ru/TableOfContents.html
+   title: "Документация"
 ---
 
 {% include donate_ru.html %}
