--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -22,11 +22,7 @@ readalso:
 Read more about <a href="VersionComparison.html#release-stages">release stages</a>. </p>
 
 <h2><a name="Download_mirrors_(official)"></a>Download mirrors<a href="#Download_mirrors_(official)" class="section_anchor"></a></h2>
-<div class="build_download">
-<a href="{{ site.fosshub }}" rel="nofollow" target="_blank"><img src="../img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
-<span>&nbsp;&nbsp;</span>
-<a href="/donate.html"><img src="/img/Donate.png" alt="Donate" title="Support development by donation"></img></a>
-</div>
+{% include download.html %}
 
 
 <h3><a name="Official_mirrors"></a>Official mirrors<a href="#Official_mirrors" class="section_anchor"></a></h3>
