Add TerminalModes article

--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -116,4 +116,4 @@ screenshots:
 <h4><a name="Confirmation_of_restarting_console_(Win-~)"></a>Confirmation of restarting console (Win-~)<a href="#Confirmation_of_restarting_console_(Win-~)" class="section_anchor"></a></h4>
 <p><img src="../img/ConEmuReCreate.png" title="ConEmu confirmation of restarting console" alt="ConEmu restart console"> </p>
 
-{% if site.url != 'local' %}{% include in_article.html %}{% endif %}
+{% include in_article.html %}
