Add download button

--- a/donate.html
+++ b/donate.html
@@ -19,6 +19,8 @@ readalso:
    title: "Download Mirrors"
  - url: /en/TableOfContents.html
    title: "Documentation"
+
+add_download: "no"
 ---
 
 {% if site.site_lang == 'ru' %}
