--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -12,6 +12,8 @@ readalso:
    title: "How to properly install ConEmu"
  - url: SettingsFast.html
    title: "First start: Fast Configuration Dialog"
+
+add_download: "no"
 ---
 
 <!-- Content starts -->
