--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ og_image: https://conemu.github.io/img/ConEmu-Maximus5.png
 otherlang:
    en: /
    ru: /ru/index.html
+
+add_download: "no"
 ---
 
 {% if site.site_lang == 'ru' %}
